# fastcp

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: release.yml
client/: CMakeLists.txt  archive_receiver.cpp  archive_receiver.hpp  client_app.cpp  client_app.hpp  connection_handler.cpp  connection_handler.hpp  file_receiver.cpp  file_receiver.hpp  main.cpp  session_manager.cpp  session_manager.hpp
common/: CMakeLists.txt  compress.hpp  file_io.cpp  file_io.hpp  hash.hpp  logger.hpp  platform.hpp  protocol.hpp  protocol_io.hpp  socket.cpp  socket.hpp  thread_pool.hpp  transfer_index.hpp  tui.cpp  tui.hpp  utils.hpp  write_buffer.hpp
server/: CMakeLists.txt  archive_builder.cpp  archive_builder.hpp  connection_pool.cpp  connection_pool.hpp  dir_scanner.cpp  dir_scanner.hpp  file_sender.cpp  file_sender.hpp  main.cpp  server_app.cpp  server_app.hpp  tui.cpp  tui.hpp
